# EmbeddedAppGeneric

./: .gitignore  CMakeLists.txt  build.sh  linker.cmake  readme.md  toolchain.cmake
App/: App.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
bootloader/: CMakeLists.txt  bootloader.c
bootloader/inc/: crc.h  memmap.h
bootloader/src/: CMakeLists.txt  crc.c  syscalls.c  system_stm32f4xx.c
platform/: CMakeLists.txt  build.sh
